--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "express": "^4.16.2",
     "fs": "0.0.1-security",
     "http": "0.0.0",
-    "https": "^1.0.0",
-    "path": "^0.12.7"
+    "https": "^1.0.0"
   }
 }
