--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "personal portfolio website",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "browserify public/main.js -o public/bundle.js"
+  },
+  "browser": {
+    "vue": "vue/dist/vue.common.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +32,7 @@
     "express": "^4.16.2",
     "fs": "0.0.1-security",
     "http": "0.0.0",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "vue": "^2.5.13"
   }
 }
