added .vue components

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "https": "^1.0.0",
-    "vue": "^2.5.13"
+    "vue": "^2.5.13",
+    "vueify": "^9.4.1"
   }
 }
