--- a/package.json
+++ b/package.json
@@ -1,44 +1,34 @@
 {
-  "name": "cdeegan.xyz",
-  "version": "1.0.0",
-  "description": "personal portfolio website",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "browserify -t vueify -p tinyify public/js/main.js -o public/js/bundle.js"
-  },
-  "browser": {
-    "vue": "vue/dist/vue.common.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/CiaranDeegan/cdeegan.xyz.git"
-  },
-  "keywords": [
-    "portfolio",
-    "website",
-    "vue",
-    "javascript",
-    "nodejs"
-  ],
-  "author": "Ciaran Deegan",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/CiaranDeegan/cdeegan.xyz/issues"
-  },
-  "homepage": "https://github.com/CiaranDeegan/cdeegan.xyz#readme",
-  "dependencies": {
-    "body-parser": "^1.18.2",
-    "express": "^4.16.2",
-    "fs": "0.0.1-security",
-    "http": "0.0.0",
-    "https": "^1.0.0",
-    "vue": "^2.5.13",
-    "vue-router": "^3.0.1"
-  },
-  "devDependencies": {
-    "browserify": "^16.1.1",
-    "tinyify": "^2.4.0",
-    "vueify": "^9.4.1"
-  }
+	"name": "cdeegan.xyz",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build",
+		"lint": "vue-cli-service lint"
+	},
+	"dependencies": {
+		"buefy": "^0.6.3",
+		"vue": "^2.5.16"
+	},
+	"devDependencies": {
+		"@vue/cli-plugin-babel": "^3.0.0-beta.15",
+		"@vue/cli-plugin-eslint": "^3.0.0-beta.15",
+		"@vue/cli-service": "^3.0.0-beta.15",
+		"eslint": "^5.0.1",
+		"node-sass": "^4.9.1",
+		"sass-loader": "^7.0.3",
+		"vue-cli-plugin-buefy": "^0.2.3",
+		"vue-template-compiler": "^2.5.16"
+	},
+	"postcss": {
+		"plugins": {
+			"autoprefixer": {}
+		}
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not ie <= 8"
+	]
 }
