--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
+		"axios": "^0.18.0",
 		"buefy": "^0.6.3",
 		"chunk": "0.0.2",
 		"vue": "^2.5.16",
