--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
 .DS_Store
-node_modules
-/dist
-
-# local env files
-.env.local
-.env.*.local
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+node_modules/
+dist/
+npm-debug.log
+yarn-error.log
 
 # Editor directories and files
 .idea
@@ -18,7 +11,6 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
-*.sw*
 
 # API Keys
 src/assets/json/*_api_key.json
