--- a/package.json
+++ b/package.json
@@ -1,37 +1,42 @@
 {
-	"name": "cdeegan.xyz",
-	"version": "0.1.0",
+	"name": "webpack-simple",
+	"description": "A Vue.js project",
+	"version": "1.0.0",
+	"author": "Ciaran Deegan <ciaran@cdeegan.xyz>",
+	"license": "MIT",
 	"private": true,
 	"scripts": {
-		"serve": "vue-cli-service serve",
-		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint"
+		"dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+		"build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
 	},
 	"dependencies": {
 		"axios": "^0.18.0",
-		"buefy": "^0.6.3",
+		"buefy": "^0.6.6",
 		"chunk": "0.0.2",
-		"vue": "^2.5.16",
+		"vue": "^2.5.11",
 		"vue-router": "^3.0.1"
-	},
-	"devDependencies": {
-		"@vue/cli-plugin-babel": "^3.0.0-beta.15",
-		"@vue/cli-plugin-eslint": "^3.0.0-beta.15",
-		"@vue/cli-service": "^3.0.0-beta.15",
-		"eslint": "^5.0.1",
-		"node-sass": "^4.9.1",
-		"sass-loader": "^7.0.3",
-		"vue-cli-plugin-buefy": "^0.2.3",
-		"vue-template-compiler": "^2.5.16"
-	},
-	"postcss": {
-		"plugins": {
-			"autoprefixer": {}
-		}
 	},
 	"browserslist": [
 		"> 1%",
 		"last 2 versions",
 		"not ie <= 8"
-	]
+	],
+	"devDependencies": {
+		"babel-core": "^6.26.0",
+		"babel-eslint": "^8.2.6",
+		"babel-loader": "^7.1.2",
+		"babel-preset-env": "^1.6.0",
+		"babel-preset-stage-3": "^6.24.1",
+		"cross-env": "^5.0.5",
+		"css-loader": "^0.28.7",
+		"eslint": "^5.2.0",
+		"eslint-plugin-vue": "^4.7.0",
+		"file-loader": "^1.1.4",
+		"node-sass": "^4.5.3",
+		"sass-loader": "^6.0.6",
+		"vue-loader": "^13.0.5",
+		"vue-template-compiler": "^2.4.4",
+		"webpack": "^3.6.0",
+		"webpack-dev-server": "^2.9.1"
+	}
 }
